--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@
     background: #222;
     color: #fff;
     box-shadow: 0 8px 30px rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: column;
+    max-height: 90vh;
+}
 }
 
 .modal.quiz h2 {
